增加了输入旁白的功能。

--- a/language/en.json
+++ b/language/en.json
@@ -2,6 +2,7 @@
   "LOAD_CHAR_ERROR": "please select a character",
   "TITLE": "RWKV Role-Playing",
   "CHAT_TAB": "chat",
+  "NARR_PH": "input narration",
   "MSG_PH": "say something",
   "MSG_LB": "arranging token...",
   "SUBMIT": "submit",
@@ -26,6 +27,8 @@
   "GREETING_LB": "greeting",
   "PERSONA_PH": "character's personality",
   "PERSONA_LB": "character's personality",
+  "EXAMPLE_DIA": "example dialog",
+  "EXAMPLE_DIA_LB": "example dialog",
   "SAVE_CHAR": "save character",
   "DEBUG": "debug",
   "TOKEN_NOW": "token now",
