--- a/language/zh.json
+++ b/language/zh.json
@@ -2,6 +2,7 @@
   "LOAD_CHAR_ERROR": "请选择一个角色",
   "TITLE": "RWKV角色扮演",
   "CHAT_TAB": "聊天",
+  "NARR_PH": "请输入旁白",
   "MSG_PH": "说些什么吧",
   "MSG_LB": "整理Token中……",
   "SUBMIT": "提交",
@@ -26,6 +27,8 @@
   "GREETING_LB": "开场白",
   "PERSONA_PH": "角色性格",
   "PERSONA_LB": "角色的性格",
+  "EXAMPLE_DIA": "示例对话",
+  "EXAMPLE_DIA_LB": "请输入示例对话",
   "SAVE_CHAR": "保存角色",
   "DEBUG": "调试",
   "TOKEN_NOW": "当前token",
