让旁白的识别符可以由用户来指定。

--- a/language/en.json
+++ b/language/en.json
@@ -4,6 +4,7 @@
   "CHAT_TAB": "chat",
   "NARR_PH": "input narration",
   "MSG_PH": "say something",
+  "AF_CK": "narration front",
   "MSG_LB": "arranging token...",
   "SUBMIT": "submit",
   "GET_PROMPT": "get prompt",
@@ -25,6 +26,8 @@
   "BOT_LB": "character name",
   "GREETING_PH": "greeting",
   "GREETING_LB": "greeting",
+  "AC_START_LB": "narration start symbol",
+  "AC_END_LB": "narration end symbol",
   "PERSONA_PH": "character's personality",
   "PERSONA_LB": "character's personality",
   "EXAMPLE_DIA": "example dialog",
