--- a/language/zh.json
+++ b/language/zh.json
@@ -5,6 +5,7 @@
   "NARR_PH": "请输入旁白",
   "MSG_PH": "说些什么吧",
   "MSG_LB": "整理Token中……",
+  "AF_CK": "旁白在前",
   "SUBMIT": "提交",
   "GET_PROMPT": "提词",
   "REGEN": "重新生成",
@@ -25,6 +26,8 @@
   "BOT_LB": "角色的名字",
   "GREETING_PH": "开场白",
   "GREETING_LB": "开场白",
+  "AC_START_LB": "旁白开始符号",
+  "AC_END_LB": "旁白结束符号",
   "PERSONA_PH": "角色性格",
   "PERSONA_LB": "角色的性格",
   "EXAMPLE_DIA": "示例对话",
