--- a/language/en.json
+++ b/language/en.json
@@ -16,7 +16,6 @@
   "CHAR_DP_LB": "please select",
   "REFRESH_CHAR": "refresh",
   "LOAD_CHAR": "load char",
-  "TURNS": "generate turn",
   "LOCK": "lock",
   "UNLOCK": "unlock",
   "SAVE_CFG": "save",
@@ -38,5 +37,8 @@
   "TOKEN_NOW": "token now",
   "OUTPUT": "output",
   "TOKEN_LAST": "token previous",
-  "GET_TOKEN": "watch"
+  "GET_TOKEN": "watch",
+  "FREE_MODE": "free mode",
+  "MIN_LEN": "reply min length(set 0 to disable this item)",
+  "QA_REPLACE": "use \"Question\" and \"Answer\" to replace character's and your name"
 }
