--- a/language/zh.json
+++ b/language/zh.json
@@ -40,5 +40,5 @@
   "GET_TOKEN": "查看token",
   "FREE_MODE": "自由模式",
   "MIN_LEN": "最小回复长度（0为不控制）",
-  "QA_REPLACE": "用Question和Answer代替你和角色的名字"
+  "QA_REPLACE": "用User和Assistant代替你和角色的名字"
 }
