feat: 允许定义保存角色时的文件名
增加保存至不同文件名的选项，方便调整人格

--- a/language/zh.json
+++ b/language/zh.json
@@ -22,6 +22,8 @@
   "CHAR": "角色",
   "USER_PH": "AI怎么称呼你",
   "USER_LB": "你的名字",
+  "FILE_NAME_PH": "角色文件保存路径",
+  "FILE_NAME_LB": "角色文件保存路径",
   "BOT_PH": "角色名字",
   "BOT_LB": "角色的名字",
   "GREETING_PH": "开场白",
