feat: 允许保存并恢复多个对话

--- a/language/en.json
+++ b/language/en.json
@@ -16,9 +16,15 @@
   "CHAR_DP_LB": "please select",
   "REFRESH_CHAR": "refresh",
   "LOAD_CHAR": "load char",
-  "LOCK": "lock",
-  "UNLOCK": "unlock",
-  "SAVE_CFG": "save",
+  "LOCK": "lock config",
+  "UNLOCK": "unlock config",
+  "SAVE_CFG": "save config",
+  "LOAD_SAVE_LIST":"load save list",
+  "LOAD_SAVE":"load save",
+  "SELECT_SAVE":"select save",
+  "UPDATE_STATE":"update chat",
+  "SAVE_STATE":"save chat",
+  "SAVE_FILE":"save name",
   "CHAR": "character",
   "USER_PH": "your name",
   "USER_LB": "your name",
