--- a/language/zh.json
+++ b/language/zh.json
@@ -16,9 +16,15 @@
   "CHAR_DP_LB": "请选择角色",
   "REFRESH_CHAR": "刷新角色列表",
   "LOAD_CHAR": "载入角色",
-  "LOCK": "锁定",
-  "UNLOCK": "解锁",
-  "SAVE_CFG": "保存",
+  "LOCK": "锁定配置",
+  "UNLOCK": "解锁配置",
+  "SAVE_CFG": "保存配置",
+  "LOAD_SAVE_LIST":"加载对话列表",
+  "LOAD_SAVE":"加载对话",
+  "SELECT_SAVE":"选择对话",
+  "UPDATE_STATE":"更新对话存档",
+  "SAVE_STATE":"保存对话",
+  "SAVE_FILE":"对话存档名",
   "CHAR": "角色",
   "USER_PH": "AI怎么称呼你",
   "USER_LB": "你的名字",
