--- a/language/zh.json
+++ b/language/zh.json
@@ -10,7 +10,7 @@
   "GET_PROMPT": "提词",
   "REGEN": "重新生成",
   "CLEAR_LAST": "清除上一条",
-  "CLEAR_CHAT": "清空聊天",
+  "CLEAR_CHAT": "重置角色",
   "CLEAR": "清空",
   "CANCEL": "取消",
   "CHAR_DP_LB": "请选择角色",
@@ -19,12 +19,12 @@
   "LOCK": "锁定配置",
   "UNLOCK": "解锁配置",
   "SAVE_CFG": "保存配置",
-  "LOAD_SAVE_LIST":"加载对话列表",
-  "LOAD_SAVE":"加载对话",
-  "SELECT_SAVE":"选择对话",
-  "UPDATE_STATE":"更新对话存档",
-  "SAVE_STATE":"保存对话",
-  "SAVE_FILE":"对话存档名",
+  "LOAD_SAVE_LIST":"加载存档列表",
+  "LOAD_SAVE":"加载存档",
+  "SELECT_SAVE":"选择存档",
+  "UPDATE_STATE":"更新存档",
+  "SAVE_STATE":"保存存档",
+  "SAVE_FILE":"存档名",
   "CHAR": "角色",
   "USER_PH": "AI怎么称呼你",
   "USER_LB": "你的名字",
@@ -46,7 +46,6 @@
   "OUTPUT": "输出",
   "TOKEN_LAST": "上一次token",
   "GET_TOKEN": "查看token",
-  "FREE_MODE": "自由模式",
   "MIN_LEN": "最小回复长度（0为不控制）",
   "QA_REPLACE": "用User和Assistant代替你和角色的名字"
 }
