--- a/language/zh.json
+++ b/language/zh.json
@@ -47,5 +47,9 @@
   "TOKEN_LAST": "上一次token",
   "GET_TOKEN": "查看token",
   "MIN_LEN": "最小回复长度（0为不控制）",
-  "QA_REPLACE": "用User和Assistant代替你和角色的名字"
+  "QA_REPLACE": "用User和Assistant代替你和角色的名字",
+  "TAB_DEFAULT": "常规",
+  "TAB_SAVE": "存档",
+  "TAB_CONFIG": "配置",
+  "TAMPER": "替角色说"
 }
