--- a/language/zh.json
+++ b/language/zh.json
@@ -36,8 +36,8 @@
   "GREETING_LB": "开场白",
   "AC_START_LB": "旁白开始符号",
   "AC_END_LB": "旁白结束符号",
-  "PERSONA_PH": "角色性格",
-  "PERSONA_LB": "角色的性格",
+  "PERSONA_PH": "角色设定",
+  "PERSONA_LB": "角色的设定",
   "EXAMPLE_DIA": "示例对话",
   "EXAMPLE_DIA_LB": "请输入示例对话",
   "SAVE_CHAR": "保存角色",
