优化了一下回复。

--- a/language/en.json
+++ b/language/en.json
@@ -44,7 +44,7 @@
   "OUTPUT": "output",
   "TOKEN_LAST": "token previous",
   "GET_TOKEN": "watch",
-  "MIN_LEN": "reply min length(set 0 to disable this item)",
+  "MAX_LEN": "reply max length(set 0 to disable this item)",
   "QA_REPLACE": "use \"User\" and \"Assistant\" to replace character's and your name",
   "TAB_DEFAULT": "regular",
   "TAB_SAVE": "save",
